add Flurry and correct bugs